--- a/src/main/resources/config/DB.properties.properties
+++ b/src/main/resources/config/DB.properties.properties
@@ -1,4 +1,4 @@
 jdbc.userName=root
 jdbc.userPwd=
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/daiyinbao?useUnicode=true&characterEncoding=utf-8
+jdbc.url=jdbc:mysql://localhost:3306/dai_yin_bao?useUnicode=true&characterEncoding=utf-8
